examples/test/testpolicy12524.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12524
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key49: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value24
          key21: value30
          key48: value18
      podSelector:
        matchLabels:
          key12: value34
          key45: value26
          key14: value11
